<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">What to do ??</string>
    <string name="request">Request!</string>
    <string name="login">Login to Facebook!</string>
    <string name="upload">Upload Photo</string><string name="post">Wall Post!</string>
    <string name="delete">Delete Post</string>
    <string name="Search">Start Search</string>
    <string name="currentlocation">Current Location: </string>
    <string name="categories">Category</string>
    <string name="locationaddress">Location address</string>
    <string name="locationname">Location Name</string>
    <string name="fblikecount">0</string>
    <string name="please_wait">Please wait...</string>
    <string name="consolidated_data">Consolidated Data From:</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="likes">Facebook Likes:</string>
    <string name="phone">Phone:</string>
    <string name="checkins">Checkins:</string>
    <string name="talkingAbout">Talking about count:</string>


</resources>
