<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <com.facebook.android.LoginButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:src="@drawable/login_button" 
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome!!!"
        android:textSize="25sp"
		android:textColor="#00ccff"
		android:typeface="serif"/>
    
    <TextView 
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:visibility="invisible"
         />
    
     <TextView
        android:id="@+id/txt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Start your search once your location is fetched."
        android:textColor="@drawable/black" 
        android:textSize="15sp"
		android:typeface="serif"/>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/white"
		    android:orientation="horizontal"
		    android:gravity="center_vertical|center_horizontal" >
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/currentlocation"
        android:textColor="@drawable/black" />
    
      <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CheckBox" 
        android:checked="false" />
    
      </LinearLayout>
    <TextView
	    android:id="@+id/location_details"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
        
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/Search"
        android:visibility="invisible" />

    <Button
        android:id="@+id/requestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/request"
        android:visibility="invisible" />
    
     <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/post"
        android:visibility="invisible" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/post"
        android:visibility="invisible" />

    <Button
        android:id="@+id/deletePostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/delete"
        android:visibility="invisible" />

</LinearLayout>