<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
<TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consolidated_data"
        android:textColor="@drawable/black" />

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >
		<ImageView
		    android:id="@+id/icon"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/icon" />
		
		<ImageView
		         android:id="@+id/iconfb"
		         android:layout_width="32dp"
		         android:layout_height="25dp"
		         android:src="@drawable/facebook_icon" 
		         android:gravity="right"/>
</LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="horizontal" >
		<TextView
				        android:id="@+id/ratingfb"
				        android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				        android:layout_margin="10dp"
				        android:text="Rating:"
				        android:textColor="@drawable/black"
				        android:textStyle="bold"  
				        android:textSize="15sp" 
				        android:gravity="center_vertical|center_horizontal" />
		<ImageView
		         android:id="@+id/dataRatingImage"
			     android:layout_width="100dp"
			     android:layout_height="40dp"
		         android:src="@drawable/ratingicon" 
		         android:gravity="right"/>
</LinearLayout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white"
    android:orientation="horizontal" >
		<ImageView
		         android:id="@+id/dataImage"
	    		 android:layout_width="100dp"
	    		 android:layout_height="fill_parent"
		         android:gravity="right"/>
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/white"
		    android:orientation="vertical" >
		    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/white"
		    android:orientation="horizontal" 
		     android:gravity="left">
				<TextView
				        android:id="@+id/name"
				        android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				        android:text="Name:"
				        android:textColor="@drawable/black"
				        android:textStyle="bold"  
				        android:textSize="20sp" 
				        android:gravity="center_vertical|center_horizontal" />
				<TextView
					    android:id="@+id/dataName"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"      
				        android:textColor="@drawable/black" 
				        android:text="Name"
				         android:paddingLeft="5dp"
				        android:gravity="center_vertical|center_horizontal"/>
				</LinearLayout>
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/white"
		    android:orientation="horizontal" >
				<TextView
				        android:id="@+id/address"
				        android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				        android:text="@string/address"
				        android:textColor="@drawable/black"
				        android:textStyle="bold"  
				        android:textSize="20sp"  />
				<TextView
					    android:id="@+id/dataAddress"
					    android:layout_width="wrap_content"    
					    android:layout_height="wrap_content"    
					     android:paddingLeft="10dp"    
				        android:textColor="@drawable/black" />
				</LinearLayout>
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/white"
		    android:orientation="horizontal" >
				<TextView
			        android:id="@+id/phone"
			        android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			        android:text="@string/phone"
			        android:textColor="@drawable/black"
			        android:textStyle="bold"  
				    android:textSize="20sp"  />
				<TextView
				    android:id="@+id/dataPhone"
				    android:layout_width="wrap_content"   
				    android:layout_height="40dp"        
			        android:paddingLeft="10dp"
			        android:textColor="@drawable/black" />
				</LinearLayout>
		</LinearLayout>
</LinearLayout>

<TextView
	    android:id="@+id/noFbMessage"
	    android:layout_width="wrap_content"
	    android:layout_height="40dp"        
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@drawable/black" />

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white"
    android:orientation="horizontal" >
		<TextView
		        android:id="@+id/likes"
		        android:layout_width="wrap_content"
		    	android:layout_height="30dp"
		        android:text="@string/likes"
		        android:textColor="@drawable/black" />
		<ImageView
		         android:id="@+id/fbicon"
			     android:layout_width="50dp"
			     android:layout_height="30dp"
			     android:paddingLeft="10dp"    
		         android:src="@drawable/fbicon" 
		         android:gravity="right"/>
		<TextView
			    android:id="@+id/dataLikes"
			    android:layout_width="wrap_content"
			    android:paddingLeft="10dp"    
			    android:layout_height="wrap_content"        
		        android:textColor="@drawable/black"
		        android:textStyle="bold"  
				android:textSize="20sp"  />

</LinearLayout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white"
    android:orientation="horizontal" >
	<TextView
	        android:id="@+id/checkins"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	        android:text="@string/checkins"
	        android:textColor="@drawable/black" />
	<TextView
		    android:id="@+id/dataCheckins"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"        
	        android:paddingLeft="10dp"
	        android:paddingRight="20dp"
	        android:textColor="@drawable/black"
	        android:textStyle="bold"  
			android:textSize="20sp"  />
</LinearLayout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white"
    android:orientation="horizontal" >
	<TextView
	        android:id="@+id/talkingAbout"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	        android:text="@string/talkingAbout"
	        android:textColor="@drawable/black" />
	<TextView
		    android:id="@+id/dataTalkingAbout"
		    android:layout_width="wrap_content"
		    android:layout_height="40dp"        
	        android:paddingLeft="10dp"
	        android:paddingRight="20dp"
	        android:textColor="@drawable/black" 
	        android:textStyle="bold"  
			android:textSize="20sp" />
</LinearLayout>
</LinearLayout>
